--- a/quiz-front/src/app/app.html
+++ b/quiz-front/src/app/app.html
@@ -1,3 +1,4 @@
-<h1>{{ title() }}</h1>
-<router-outlet></router-outlet>
-
+<div class="app-container">
+  <h1 class="quiz-title">{{ title() }}</h1>
+  <router-outlet></router-outlet>
+</div>
