--- a/quiz-front/src/app/pages/Login.html
+++ b/quiz-front/src/app/pages/Login.html
@@ -1,26 +1,32 @@
-<form (ngSubmit)="onLogin()">
-  <input
-    type="text"
-    [(ngModel)]="username"
-    name="username"
-    placeholder="Nom d'utilisateur"
-    required
-  />
+<div class="login-container">
+  <form (ngSubmit)="onLogin()" class="login-form">
+    <h2>Connexion</h2>
 
-  <input
-    type="password"
-    [(ngModel)]="password"
-    name="password"
-    placeholder="Mot de passe"
-    required
-  />
+    <input
+      type="text"
+      [(ngModel)]="username"
+      name="username"
+      placeholder="Nom d'utilisateur"
+      required
+    />
 
-  <button type="submit">Se connecter</button>
+    <input
+      type="password"
+      [(ngModel)]="password"
+      name="password"
+      placeholder="Mot de passe"
+      required
+    />
 
-  <div *ngIf="error">{{ error }}</div>
-</form>
+    <button type="submit">Se connecter</button>
 
-<p>
-  Vous n’avez pas de compte ?
-  <a routerLink="/auth/register">Créer un compte</a>
-</p>
+    @if (error) {
+      <div class="error-message">{{ error }}</div>
+    }
+  </form>
+
+  <p class="register-text">
+    Vous n’avez pas de compte ?
+    <a routerLink="/auth/register">Créer un compte</a>
+  </p>
+</div>
